--- a/Multiple Choice Creator/Multiple Choice Creator/Filters.resx
+++ b/Multiple Choice Creator/Multiple Choice Creator/Filters.resx
@@ -152,4 +152,10 @@
         dFlfx2UP0VToDQQCgz6DBoD/XwP+AiiRIsF8vN5wAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="errorProvider2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>147, 17</value>
+  </metadata>
 </root>
